--- a/index.html
+++ b/index.html
@@ -36,5 +36,6 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
     <script src="js/cookie.js" type="text/javascript"></script>
     <script src="js/login.js" type="text/javascript"></script>
+    <iframe id="target" src="" width="" height="" style="display:none;"></iframe>
   </body>
 </html>
