--- a/dashboard.html
+++ b/dashboard.html
@@ -11,7 +11,31 @@
     <script src="https://code.jquery.com/jquery-3.6.0.min.js" integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.min.js" integrity="sha384-QJHtvGhmr9XOIpI6YVutG+2QOK9T+ZnN4kzFN1RtK3zEFEIsxhlmWl5/YESvpZ13" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
+
+    <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js"></script>
+    <script src="js/supabase-init.js"></script>
+    <script type="text/javascript">
+      const { createClient } = supabase
+      const _supabase = createClient(SUPABASE_URL, SUPABASE_KEY)
+    </script>
+
     <script src="js/cookie.js" type="text/javascript"></script>
     <script src="js/login.js" type="text/javascript"></script>
+    <script type="text/javascript">
+    async function getEvents (){
+      let { data: events, error } = await _supabase
+      .from('events')
+      .select('*')
+
+      if (events) {
+        console.log(events);
+      }
+      else {
+        console.log(error);
+      }
+    }
+
+    getEvents();
+    </script>
   </body>
 </html>
