--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <h1 class="h3 mb-3 fw-normal">Please sign in</h1>
 
         <div class="form-floating">
-          <input type="email" class="form-control" id="email" placeholder="name@example.com" value="coisas@gmail.com" required>
+          <input type="email" class="form-control" id="email" placeholder="name@example.com" value="gonelf@gmail.com" required>
           <label for="email">Email address</label>
         </div>
         <div class="form-floating">
@@ -34,10 +34,19 @@
     <script src="https://code.jquery.com/jquery-3.6.0.min.js" integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.min.js" integrity="sha384-QJHtvGhmr9XOIpI6YVutG+2QOK9T+ZnN4kzFN1RtK3zEFEIsxhlmWl5/YESvpZ13" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
+
+    <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js"></script>
+    <script src="js/supabase-init.js"></script>
+    <script type="text/javascript">
+      const { createClient } = supabase
+      const _supabase = createClient(SUPABASE_URL, SUPABASE_KEY)
+    </script>
+
     <script src="js/cookie.js" type="text/javascript"></script>
+    <!-- <script src="shared/init.js" charset="utf-8"></script> -->
     <script src="js/login.js" type="text/javascript"></script>
     <script type="text/javascript">
-      send_to_dashboard_if_logged();
+      // send_to_dashboard_if_logged();
     </script>
   </body>
 </html>
